--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -13,8 +13,10 @@
     경험치 : {{data.exp}}
 
     <form action="/" method="post">
-        다음 이름 : <input type="text" name="user">
-        <input type="submit" value="전송하기">
+        name : <input type="text" name="name"></br>
+        age : <input type="text" name="age"></br>
+        hobby : <input type="text" name="hobby"></br>
+        <input type="submit" value="submit">
     </form>
 
 </body>
